--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Martial Arts App</title>
+  <title>Main Menu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; max-width: 700px; margin: 48px auto; padding: 0 16px; }
+    h1 { margin-bottom: 8px; }
+    ul { line-height: 1.9; font-size: 18px; }
+    a { text-decoration: none; }
+  </style>
 </head>
 <body>
-  <h1>Martial Arts App</h1>
-  <h2>Choose a section:</h2>
+  <h1>Dojo Manager</h1>
   <ul>
     <li><a href="students.html">Students</a></li>
     <li><a href="payments.html">Payments</a></li>
+    <li><a href="attendance.html">Attendance</a></li>
     <li><a href="leads.html">Leads</a></li>
     <li><a href="expenses.html">Expenses</a></li>
     <li><a href="accounting.html">Accounting</a></li>
