--- a/public/leads.html
+++ b/public/leads.html
@@ -1,78 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Leads</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; max-width: 1000px; margin: 24px auto; padding: 0 16px; }
+    h1 { margin-bottom: 8px; }
+    form { border: 1px solid #ddd; border-radius: 8px; padding: 16px; margin: 16px 0; }
+    label { display:block; margin-top:8px; font-size:14px; }
+    input, select, textarea { width:100%; padding:8px; box-sizing:border-box; }
+    .row { display:grid; gap:12px; grid-template-columns: repeat(2, 1fr); }
+    .actions { margin-top:10px; display:flex; gap:8px; }
+    table { width:100%; border-collapse: collapse; margin-top: 16px; }
+    th, td { border:1px solid #eee; padding:8px; font-size:14px; vertical-align: top; }
+    th { background:#f9f9f9; }
+    .msg { margin:8px 0; }
+    .ok{color:#137333} .err{color:#b00020}
+  </style>
 </head>
 <body>
-  <h1>Leads</h1>
+  <div style="display:flex; justify-content:space-between; align-items:center;">
+    <h1>Leads</h1>
+    <a href="index.html">← Back to Main Page</a>
+  </div>
+
+  <div id="msg" class="msg"></div>
+
   <form id="leadForm">
-    <p>Name: <input type="text" id="name" required></p>
-    <p>Phone: <input type="text" id="phone"></p>
-    <p>Email: <input type="email" id="email"></p>
-    <p>Notes: <input type="text" id="notes"></p>
-    <p>Follow-up Date: <input type="date" id="follow_up_date"></p>
-    <button type="submit">Add Lead</button>
+    <div class="row">
+      <div>
+        <label for="name">Name</label>
+        <input id="name" required />
+      </div>
+      <div>
+        <label for="phone">Phone</label>
+        <input id="phone" />
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input id="email" type="email" />
+      </div>
+      <div>
+        <label for="interested_program">Interested Program</label>
+        <input id="interested_program" />
+      </div>
+      <div>
+        <label for="follow_up_date">Follow-up Date</label>
+        <input id="follow_up_date" type="date" />
+      </div>
+      <div>
+        <label for="status">Status</label>
+        <select id="status">
+          <option>New</option>
+          <option>Contacted</option>
+          <option>Trial</option>
+          <option>Enrolled</option>
+          <option>Lost</option>
+        </select>
+      </div>
+      <div style="grid-column:1 / -1">
+        <label for="notes">Notes</label>
+        <input id="notes" />
+      </div>
+    </div>
+    <div class="actions">
+      <button type="submit">Add Lead</button>
+      <button type="reset">Reset</button>
+    </div>
   </form>
 
-  <h2>Leads List</h2>
-  <table border="1" id="leadTable">
+  <table id="leadsTable">
     <thead>
       <tr>
         <th>ID</th>
-        <th>Name</th>
-        <th>Phone</th>
-        <th>Email</th>
+        <th>Name / Contact</th>
+        <th>Interest</th>
+        <th>Follow-up</th>
+        <th>Status</th>
         <th>Notes</th>
-        <th>Follow-up Date</th>
+        <th>Actions</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="leadsBody">
+      <tr><td colspan="7">Loading…</td></tr>
+    </tbody>
   </table>
 
-  <p>
-    <a href="index.html">Back to Home</a> |
-    <a href="accounting.html"><button>Go to Accounting Summary</button></a>
-  </p>
+<script>
+const $ = (id)=>document.getElementById(id);
+const msg=(t,ok=false)=>{const m=$('msg');m.className='msg '+(ok?'ok':'err');m.textContent=t;if(ok)setTimeout(()=>{m.textContent='';m.className='msg';},1800);};
 
-  <script>
-    async function loadLeads() {
-      const res = await fetch('/api/leads');
-      const data = await res.json();
-      const tbody = document.querySelector('#leadTable tbody');
-      tbody.innerHTML = '';
-      data.forEach(lead => {
-        const row = `<tr>
-          <td>${lead.id}</td>
-          <td>${lead.name}</td>
-          <td>${lead.phone}</td>
-          <td>${lead.email}</td>
-          <td>${lead.notes}</td>
-          <td>${lead.follow_up_date}</td>
-        </tr>`;
-        tbody.innerHTML += row;
-      });
+async function loadLeads(){
+  const tbody=$('leadsBody'); tbody.innerHTML='<tr><td colspan="7">Loading…</td></tr>';
+  try{
+    const res=await fetch('/api/leads'); const data=await res.json();
+    if(!Array.isArray(data)||data.length===0){tbody.innerHTML='<tr><td colspan="7">No leads yet.</td></tr>';return;}
+    tbody.innerHTML='';
+    for(const L of data){
+      const tr=document.createElement('tr');
+      tr.innerHTML=`
+        <td>${L.id}</td>
+        <td>${L.name||''}<br>${[L.phone,L.email].filter(Boolean).join('<br>')}</td>
+        <td>${L.interested_program||''}</td>
+        <td>${L.follow_up_date||''}</td>
+        <td>${L.status||'New'}</td>
+        <td>${L.notes||''}</td>
+        <td>
+          <button class="enroll" data-id="${L.id}">Enroll as Student</button>
+          <button class="status" data-id="${L.id}" data-next="Contacted">Mark Contacted</button>
+          <button class="del" data-id="${L.id}">Delete</button>
+        </td>
+      `;
+      tbody.appendChild(tr);
     }
+  }catch(e){tbody.innerHTML=`<tr><td colspan="7" class="err">Error: ${e.message}</td></tr>`;}
+}
 
-    document.getElementById('leadForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value;
-      const phone = document.getElementById('phone').value;
-      const email = document.getElementById('email').value;
-      const notes = document.getElementById('notes').value;
-      const follow_up_date = document.getElementById('follow_up_date').value;
+async function submitLead(e){
+  e.preventDefault();
+  const body={
+    name:$('name').value, phone:$('phone').value, email:$('email').value,
+    interested_program:$('interested_program').value, follow_up_date:$('follow_up_date').value,
+    status:$('status').value, notes:$('notes').value
+  };
+  try{
+    const res=await fetch('/api/leads',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(body)});
+    const out=await res.json(); if(!res.ok) throw new Error(out.error||'Save failed');
+    msg('Lead added.',true); $('leadForm').reset(); await loadLeads();
+  }catch(e){msg(e.message);}
+}
 
-      await fetch('/api/leads', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name, phone, email, notes, follow_up_date })
-      });
+async function handleTableClick(e){
+  const id=e.target.dataset.id; if(!id) return;
 
-      e.target.reset();
-      loadLeads();
-    });
+  if(e.target.classList.contains('del')){
+    if(!confirm(`Delete lead ${id}?`)) return;
+    try{
+      const res=await fetch(`/api/leads/${id}`,{method:'DELETE'});
+      const out=await res.json(); if(!res.ok) throw new Error(out.error||'Delete failed');
+      msg(`Deleted lead ${id}.`,true); await loadLeads();
+    }catch(err){msg(err.message);}
+  }
 
-    loadLeads();
-  </script>
+  if(e.target.classList.contains('status')){
+    const next=e.target.dataset.next||'Contacted';
+    try{
+      const res=await fetch(`/api/leads/${id}`,{method:'PATCH',headers:{'Content-Type':'application/json'},body:JSON.stringify({status:next})});
+      const out=await res.json(); if(!res.ok) throw new Error(out.error||'Update failed');
+      msg(`Lead ${id} marked ${next}.`,true); await loadLeads();
+    }catch(err){msg(err.message);}
+  }
+
+  if(e.target.classList.contains('enroll')){
+    try{
+      const all = await (await fetch('/api/leads')).json();
+      const lead = all.find(x=>String(x.id)===String(id));
+      if(!lead) throw new Error('Lead not found');
+
+      const today = new Date();
+      const start = today.toISOString().slice(0,10);
+      const renewal = new Date(today.getTime() + 28*86400000).toISOString().slice(0,10);
+
+      const studentBody = {
+        name: lead.name || '',
+        phone: lead.phone || '',
+        email: lead.email || '',
+        program: lead.interested_program || '',
+        start_date: start,
+        renewal_date: renewal
+      };
+
+      const resS = await fetch('/api/students',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(studentBody)});
+      const outS = await resS.json(); if(!resS.ok) throw new Error(outS.error||'Enroll failed');
+
+      await fetch(`/api/leads/${id}`,{method:'PATCH',headers:{'Content-Type':'application/json'},body:JSON.stringify({status:'Enrolled'})});
+
+      msg(`Enrolled lead ${id} → student ${outS.id}.`,true);
+      await loadLeads();
+    }catch(err){msg(err.message);}
+  }
+}
+
+$('leadForm').addEventListener('submit', submitLead);
+$('leadsTable').addEventListener('click', handleTableClick);
+loadLeads();
+</script>
 </body>
 </html>
